libxml2 needs osx deployment target set also
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4626 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -63,7 +63,7 @@ BUILD=build_$(SNAP)
 
 $(SRC)/$(BUILD)/Makefile: apply
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
-	../configure --prefix=$(PREFIX) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) ../configure --prefix=$(PREFIX) \
                      --srcdir=$(SRC) \
                      --with-python=$(WP) \
                      --with-pic \
@@ -74,7 +74,7 @@ compile: $(SRC)/$(BUILD)/Makefile
 
 py:
 	cd $(SRC)/python; \
-	$(PYTHON) setup.py build --build-base=build_$(SNAP) $(DIST_OPT) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py build --build-base=build_$(SNAP) $(DIST_OPT) \
                               install --force
 
 build: expand compile py
