more osx deployment target changes
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4627 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/egenix-mx/Makefile
+++ b/external/egenix-mx/Makefile
@@ -14,7 +14,7 @@ apply: patches
 
 build: expand apply
 	cd $(SRC); \
-	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
 egenix-mx-base-$(VERSION).tar.gz:
