/me cries into his beard
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4629 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/dateutil/Makefile
+++ b/external/dateutil/Makefile
@@ -25,7 +25,7 @@ apply: patches-$(VERSION)
 
 build: expand apply
 	cd $(SRC); \
-	$(PYTHON) setup.py \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py \
           build --build-base=$(BUILD) $(DIST_OPT) \
           install --force
 
