--- a/external/zope/Makefile
+++ b/external/zope/Makefile
@@ -13,7 +13,7 @@ apply: patches-$(VERSION)
 
 build: expand apply
 	cd $(SRC); \
-	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
 ZopeInterface-$(VERSION).tgz:
