osx deployment target
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4630 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/pychecker/Makefile
+++ b/external/pychecker/Makefile
@@ -21,7 +21,7 @@ BUILD=build_$(SNAP)
 
 build: expand
 	cd $(SRC); \
-	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
 pychecker-$(VERSION).tar.gz:
