osx deployment target changes and also preparing for win32 setup.exe build
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4631 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/chandlerdb/Makefile
+++ b/internal/chandlerdb/Makefile
@@ -16,7 +16,7 @@ endif
 
 
 build:
-	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            build_ext --swig-opts="-c++ -modern" \
                                      --swig=$(_swig) \
                            install --force
