wxPython needs osx deployment target set
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4633 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -66,7 +66,7 @@ ifeq ($(OS),Darwin)
 
 $(SRC)/$(BUILD)/Makefile:
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
-	../configure --prefix=$(PREFIX) $(CONF_OPT) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) ../configure --prefix=$(PREFIX) $(CONF_OPT) \
                      --enable-monolithic \
                      --enable-geometry \
                      --enable-sound \
@@ -78,7 +78,7 @@ $(SRC)/$(BUILD)/Makefile:
 
 wxPython:
 	cd $(SRC)/wxPython; \
-        $(PYTHON) setup.py BUILD_OGL=0 BUILD_GLCANVAS=0 \
+        MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py BUILD_OGL=0 BUILD_GLCANVAS=0 \
                            USE_SWIG=0 \
                            SWIG=$(SWIG) \
                            INSTALL_MULTIVERSION=0 \
