ok, I don't know why I never remember that you cannot easily cancel a commit once you are in the "editing the comment" part This time I made the change use the PREFIX define to make it less hard-code
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4707 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -116,7 +116,7 @@ $(SRC)/$(BUILD)/Makefile:
 
 wxPython:
 	cd $(SRC)/wxPython; \
-        export LD_LIBRARY_PATH=/home/builder/tinderbuild/external/release/lib; \
+        export LD_LIBRARY_PATH=$(PREFIX)/lib; \
         $(PYTHON) setup.py BUILD_OGL=0 BUILD_GLCANVAS=0 \
                            USE_SWIG=$(SWIG_OPTION) \
                            SWIG=$(SWIG) \
