testing change to Makefile to allow build to work on ahukini again the *only* difference between hardhat runs (which fail) and command-lines runs is the path thru the Makefile.  This change makes the hardhat path the same as the command line path
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4803 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -44,7 +44,11 @@ binaries: env
 $(SYSTEMS):
 	$(MAKE) -C $@ DEBUG=$(DEBUG)
 
-all: env sources $(SYSTEMS)
+all: env sources
+	@for system in $(SYSTEMS); \
+	do \
+	    $(MAKE) -C $$system DEBUG=$(DEBUG) ; \
+	done
 
 world: all binaries install
 	make -C ../internal DEBUG=$(DEBUG) world
