ok, I knew that the previous change was not a good one (for one thing it would build all of the external items and not stop for any errors) but it allowed me to see the output from the other two full builds and compare the path thru the Makefile to what is happening on OSX. Found a subtle rule issue that I've changed - I'm able to reproduce the problem by doing from the external/ directory "make DEBUG=0 realclean all" and when I make this change the same command works. Now to see how hardhat/tinderbox likes it
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4804 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -44,11 +44,7 @@ binaries: env
 $(SYSTEMS):
 	$(MAKE) -C $@ DEBUG=$(DEBUG)
 
-all: env sources
-	@for system in $(SYSTEMS); \
-	do \
-	    $(MAKE) -C $$system DEBUG=$(DEBUG) ; \
-	done
+all: sources $(SYSTEMS)
 
 world: all binaries install
 	make -C ../internal DEBUG=$(DEBUG) world
