Another double-colon issue I think
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4805 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -49,7 +49,7 @@ all: sources $(SYSTEMS)
 world: all binaries install
 	make -C ../internal DEBUG=$(DEBUG) world
 
-clean: env
+clean:
 	@for system in $(SYSTEMS); \
 	do \
 	    $(MAKE) -C $$system -k DEBUG=$(DEBUG) clean; \
