Rolling back test changes - did not fix the immediate error and I don't want to introduce any other issues at this time
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4815 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -44,12 +44,12 @@ binaries: env
 $(SYSTEMS):
 	$(MAKE) -C $@ DEBUG=$(DEBUG)
 
-all: sources $(SYSTEMS)
+all: env sources $(SYSTEMS)
 
 world: all binaries install
 	make -C ../internal DEBUG=$(DEBUG) world
 
-clean:
+clean: env
 	@for system in $(SYSTEMS); \
 	do \
 	    $(MAKE) -C $$system -k DEBUG=$(DEBUG) clean; \
