bug 2687 r=robin Removed unicode option from linux build to bring it in-line with osx and win32.  All of them will have it turned back on during 0.6
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4821 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -111,8 +111,7 @@ $(SRC)/$(BUILD)/Makefile:
                      --enable-display \
                      --with-libpng \
                      --with-gtk \
-                     --enable-gtk2 \
-                     --enable-unicode
+                     --enable-gtk2
 
 wxPython:
 	cd $(SRC)/wxPython; \
@@ -123,7 +122,7 @@ wxPython:
                            INSTALL_MULTIVERSION=0 \
                            BUILD_BASE=$(BUILD) \
                            WX_CONFIG=$(PREFIX)/bin/wx-config \
-                           WXPORT=gtk2 UNICODE=1 \
+                           WXPORT=gtk2 \
                            build $(DIST_OPT) install FINAL=$(FINAL)
 
 MANIFEST=$(SNAP)/$(SITE)/wx \
