Changing the sources rule to specify the target all allows building of release mode
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4835 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -42,7 +42,7 @@ binaries: env
 	done
 
 $(SYSTEMS):
-	$(MAKE) -C $@ DEBUG=$(DEBUG)
+	$(MAKE) -C $@ DEBUG=$(DEBUG) all
 
 all: env sources $(SYSTEMS)
 
