moved some DBContainer code to C
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4878 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/chandlerdb/Makefile
+++ b/internal/chandlerdb/Makefile
@@ -1,7 +1,7 @@
 
 include ../Makefile.inc
 
-RELVER=0.5-1
+RELVER=0.5-2
 CHANDLERDB=$(INTERNAL)/chandlerdb
 
 BUILD=build_$(SNAP)
@@ -16,7 +16,9 @@ endif
 
 
 build:
-	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) \
+        DB=$(PREFIX)/db \
+        $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            build_ext --swig-opts="-c++ -modern" \
                                      --swig=$(_swig) \
                            install --force
