fixed Windows build issues
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4882 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/chandlerdb/Makefile
+++ b/internal/chandlerdb/Makefile
@@ -10,14 +10,16 @@ MANIFEST=$(SNAP)/$(SITE)/chandlerdb
 
 ifeq ($(OS),Cygwin)
 _swig=`cygpath -aw $(SWIG)`
+_prefix=`cygpath -aw $(PREFIX)`
 else
 _swig=$(SWIG)
+_prefix=$(PREFIX)
 endif
 
 
 build:
 	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) \
-        DB=$(PREFIX)/db \
+        PREFIX=$(_prefix) \
         $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            build_ext --swig-opts="-c++ -modern" \
                                      --swig=$(_swig) \
