--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -42,14 +42,15 @@ wxPython:
 	cp $(SRC)/wxPython/src/winxp.manifest $(BUILD_ROOT)/$(SNAP)/bin/chandler.exe.manifest; \
 	cp $(SRC)/wxPython/src/winxp.manifest $(BUILD_ROOT)/$(SNAP)/bin/python$(PYTHON_SUFFIX).exe.manifest; \
 	chmod a+x $(BUILD_ROOT)/$(SNAP)/bin/python$(PYTHON_SUFFIX).exe.manifest; \
-	$(PYTHON) setup.py BUILD_BASE=$(BUILD) BUILD_ACTIVEX=0 \
-                           USE_SWIG=$(SWIG_OPTION) \
-                           SWIG=`cygpath -aw $(SWIG)` \
-                           INSTALL_MULTIVERSION=0 \
-                           MONOLITHIC=0 \
-                           build $(DIST_OPT) \
-                           install \
-                           FINAL=$(FINAL) HYBRID=0
+	$(PYTHON) setup.py BUILD_BASE=$(BUILD) \
+                UNICODE=0 BUILD_ACTIVEX=0 \
+                USE_SWIG=$(SWIG_OPTION) \
+                SWIG=`cygpath -aw $(SWIG)` \
+                INSTALL_MULTIVERSION=0 \
+                MONOLITHIC=0 \
+                build $(DIST_OPT) \
+                install \
+                FINAL=$(FINAL) HYBRID=0
 
 MANIFEST=$(SNAP)/$(SITE)/wx $(SNAP)/bin/chandler.exe.manifest $(SNAP)/bin/python$(PYTHON_SUFFIX).exe.manifest
 
@@ -81,13 +82,14 @@ $(SRC)/$(BUILD)/Makefile:
 
 wxPython:
 	cd $(SRC)/wxPython; \
-        MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py BUILD_OGL=0 BUILD_GLCANVAS=0 \
-                           USE_SWIG=$(SWIG_OPTION) \
-                           SWIG=$(SWIG) \
-                           INSTALL_MULTIVERSION=0 \
-                           BUILD_BASE=$(BUILD) \
-                           WX_CONFIG=$(PREFIX)/bin/wx-config \
-                           build $(DIST_OPT) install FINAL=$(FINAL)
+        MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py \
+                UNICODE=0 BUILD_OGL=0 BUILD_GLCANVAS=0 \
+                USE_SWIG=$(SWIG_OPTION) \
+                SWIG=$(SWIG) \
+                INSTALL_MULTIVERSION=0 \
+                BUILD_BASE=$(BUILD) \
+                WX_CONFIG=$(PREFIX)/bin/wx-config \
+                build $(DIST_OPT) install FINAL=$(FINAL)
 
 MANIFEST=$(SNAP)/$(SITE)/wx \
          $(SNAP)/$(SITE)/wxPython \
@@ -119,14 +121,15 @@ $(SRC)/$(BUILD)/Makefile:
 wxPython:
 	cd $(SRC)/wxPython; \
         export LD_LIBRARY_PATH=$(PREFIX)/lib; \
-        $(PYTHON) setup.py BUILD_OGL=0 BUILD_GLCANVAS=0 \
-                           USE_SWIG=$(SWIG_OPTION) \
-                           SWIG=$(SWIG) \
-                           INSTALL_MULTIVERSION=0 \
-                           BUILD_BASE=$(BUILD) \
-                           WX_CONFIG=$(PREFIX)/bin/wx-config \
-                           WXPORT=gtk2 \
-                           build $(DIST_OPT) install FINAL=$(FINAL)
+        $(PYTHON) setup.py \
+                UNICODE=0 BUILD_OGL=0 BUILD_GLCANVAS=0 \
+                USE_SWIG=$(SWIG_OPTION) \
+                SWIG=$(SWIG) \
+                INSTALL_MULTIVERSION=0 \
+                BUILD_BASE=$(BUILD) \
+                WX_CONFIG=$(PREFIX)/bin/wx-config \
+                WXPORT=gtk2 \
+                build $(DIST_OPT) install FINAL=$(FINAL)
 
 MANIFEST=$(SNAP)/$(SITE)/wx \
          $(SNAP)/$(SITE)/wxPython \
