Turning on Unicode support bug 401 r=bear
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4977 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -1,7 +1,7 @@
 
 include ../Makefile.inc
 
-RELVER=2.5.3.1-13
+RELVER=2.5.3.1-14
 SRC=$(INTERNAL)/wxPython-2.5
 SWIG_OPTION=1
 WXMAJORVERSIONCOMPACT=253
@@ -43,7 +43,7 @@ wxPython:
 	cp $(SRC)/wxPython/src/winxp.manifest $(BUILD_ROOT)/$(SNAP)/bin/python$(PYTHON_SUFFIX).exe.manifest; \
 	chmod a+x $(BUILD_ROOT)/$(SNAP)/bin/python$(PYTHON_SUFFIX).exe.manifest; \
 	$(PYTHON) setup.py BUILD_BASE=$(BUILD) \
-                UNICODE=0 BUILD_ACTIVEX=0 \
+                UNICODE=1 BUILD_ACTIVEX=0 \
                 USE_SWIG=$(SWIG_OPTION) \
                 SWIG=`cygpath -aw $(SWIG)` \
                 INSTALL_MULTIVERSION=0 \
@@ -71,7 +71,7 @@ $(SRC)/$(BUILD)/Makefile:
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
 	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) ../configure --prefix=$(PREFIX) $(CONF_OPT) \
                      --enable-monolithic \
-                     --disable-unicode \
+                     --enable-unicode \
                      --enable-geometry \
                      --enable-sound \
                      --enable-display \
@@ -83,7 +83,7 @@ $(SRC)/$(BUILD)/Makefile:
 wxPython:
 	cd $(SRC)/wxPython; \
         MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py \
-                UNICODE=0 BUILD_OGL=0 BUILD_GLCANVAS=0 \
+                UNICODE=1 BUILD_OGL=0 BUILD_GLCANVAS=0 \
                 USE_SWIG=$(SWIG_OPTION) \
                 SWIG=$(SWIG) \
                 INSTALL_MULTIVERSION=0 \
@@ -109,7 +109,7 @@ $(SRC)/$(BUILD)/Makefile:
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
 	../configure --prefix=$(PREFIX) $(CONF_OPT) \
                      --enable-monolithic \
-                     --disable-unicode \
+                     --enable-unicode \
                      --enable-geometry \
                      --enable-sound \
                      --enable-display \
@@ -122,7 +122,7 @@ wxPython:
 	cd $(SRC)/wxPython; \
         export LD_LIBRARY_PATH=$(PREFIX)/lib; \
         $(PYTHON) setup.py \
-                UNICODE=0 BUILD_OGL=0 BUILD_GLCANVAS=0 \
+                UNICODE=1 BUILD_OGL=0 BUILD_GLCANVAS=0 \
                 USE_SWIG=$(SWIG_OPTION) \
                 SWIG=$(SWIG) \
                 INSTALL_MULTIVERSION=0 \
