Enable M2Crypto build in external, and disable it in internal.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@5046 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -8,6 +8,7 @@ SYSTEMS=persistence/db \
         PyLucene \
         persistence/libxml2 \
         openssl \
+	m2crypto \
         egenix-mx \
         jabber-py \
         SOAPpy \
