Bad newline, bad.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@5048 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/m2crypto/Makefile
+++ b/external/m2crypto/Makefile
@@ -25,8 +25,7 @@ build: expand apply
 else
 build: expand apply
 	cd $(SRC); \
-	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py
-\
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py \
           build_ext --swig=$(SWIG) \
                     --library-dirs=$(BUILD_ROOT)/$(SNAP)/lib \
                     --include-dirs=$(BUILD_ROOT)/$(SNAP)/include \
