Added cd $(BUILD_ROOT) to ensure that the make snap is run in the proper directory only a problem if you are not running a "stock" source tree thanks to Bryan S. for the catch
git-svn-id: http://svn.osafoundation.org/chandler/trunk@5106 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/queryparser/Makefile
+++ b/internal/queryparser/Makefile
@@ -23,6 +23,7 @@ build: $(PYTHON) $(SRC)/QueryParser.g
 	cp -p QueryParser.py $(MANIFEST_PATH)
 
 snap: 
+	cd $(BUILD_ROOT); \
 	tar -cvzf $(QP)/QueryParser-$(SNAP)-$(RELVER).tar.gz $(MANIFEST)
 	$(MD5) QueryParser-$(SNAP)-$(RELVER).tar.gz > QueryParser-$(SNAP)-$(RELVER).tar.gz.md5
 
