--- a/chandler/distrib/osx/bundle/Info.plist
+++ b/chandler/distrib/osx/bundle/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>RunChandler</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Chandler Checkpoint 20050418 from the Open Source Applications Foundation</string>
+	<string>Chandler Checkpoint 20050425 from the Open Source Applications Foundation</string>
 	<key>CFBundleIconFile</key>
 	<string>Chandler.icns</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>CHAN</string>
 	<key>CFBundleVersion</key>
-	<string>0.5.20050418</string>
+	<string>0.5.03</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
