Don't know why I thought I could switch the tarball from gz to bz2 when *everything* else in Chandler is gz
git-svn-id: http://svn.osafoundation.org/chandler/trunk@5128 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -16,14 +16,14 @@ build: expand apply
 	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
-Twisted-$(VERSION).tar.bz2:
-	$(CURL) http://builds.o11n.org/external/Twisted-$(VERSION).tar.bz2
-	$(CURL) http://builds.o11n.org/external/Twisted-$(VERSION).tar.bz2.md5
+Twisted-$(VERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/Twisted-$(VERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/Twisted-$(VERSION).tar.gz.md5
 
-sources: Twisted-$(VERSION).tar.bz2
+sources: Twisted-$(VERSION).tar.gz
 
-Twisted-$(VERSION)-expanded: Twisted-$(VERSION).tar.bz2
-	tar xvjf Twisted-$(VERSION).tar.bz2
+Twisted-$(VERSION)-expanded: Twisted-$(VERSION).tar.gz
+	tar xvzf Twisted-$(VERSION).tar.gz
 	touch Twisted-$(VERSION)-expanded
 
 expand: Twisted-$(VERSION)-expanded
