Preparing for upgrading to the 2.0 version of twisted. Makefile changes to bump the relver and update the twisted version to 20050426 (svn head) and the patches-20050426 change to prevent twisted's setup.py from installing the helper scripts bug 2308
git-svn-id: http://svn.osafoundation.org/chandler/trunk@5143 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -1,6 +1,6 @@
 
-VERSION=Sumo2.0
-RELVER=$(VERSION)-5
+VERSION=20050426
+RELVER=$(VERSION)-6
 TWISTED=$(BUILD_ROOT)/twisted
 SRC=$(TWISTED)/Twisted-$(VERSION)
 
