Partial fix for bug 2303, new optional strip target strips .so's on Linux and OS X. Fast tboxes (and official builds) will use this. Full tboxes todo. r=bear.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@5160 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -128,6 +128,22 @@ checkout:
 
 install: $(ARCHIVES) $(ARCHIVES_INST)
 
+ifeq ($(OS),Cygwin)
+strip:
+else
+ifeq ($(DEBUG),1)
+strip:
+else
+ifeq ($(OS),Darwin)
+STRIP_OPTIONS=-S
+else
+STRIP_OPTIONS=
+endif
+strip:
+	find $(CHANDLERBIN)/release -name "*.so" |xargs -r strip $(STRIP_OPTIONS)
+endif
+endif
+
 clean:
 	rm -rf $(CHANDLERBIN)/$(SNAP) __repository__
 	rm -f chandler.log randpool.dat
