Mac xargs does not lilke -r.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@5161 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -140,7 +140,7 @@ else
 STRIP_OPTIONS=
 endif
 strip:
-	find $(CHANDLERBIN)/release -name "*.so" |xargs -r strip $(STRIP_OPTIONS)
+	find $(CHANDLERBIN)/release -name "*.so" |xargs strip $(STRIP_OPTIONS)
 endif
 endif
 
